<resources>

    <string name="app_name">RealEstateManager</string>

    //toolbar menu
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="update_button_select_property_first">To update a property, select a property first in the list.</string>
    <string name="loan_simulator">Loan simulator</string>

    //drawer menu
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="temp">temp</string>
    <string name="square_meters">square meters</string>
    <string name="rooms">rooms</string>
    <string name="bathrooms">bathrooms</string>
    <string name="bedrooms">bedrooms</string>
    <string name="name">name</string>
    <string name="first_name">first name</string>
    <string name="available">available</string>
    <string name="school">school</string>
    <string name="commerces">commerces</string>
    <string name="park">park</string>
    <string name="subways">subways</string>
    <string name="train">train</string>
    <string name="location_of_interest">location of interest</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="map">Map</string>

    //property list
    <string name="type">type</string>
    <string name="localisation">localisation</string>
    <string name="price">price</string>
    <string name="illustration_property_s">Illustration property\'s</string>


    //property detail
    <string name="media">media</string>
    <string name="description">description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="surface">surface</string>
    <string name="square_meters_example">300m²</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="_8">8</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="_2">2</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="_4">4</string>
    <string name="agent">Agent</string>
    <string name="district">District</string>
    <string name="path">path</string>
    <string name="complement">complement</string>
    <string name="city">city</string>
    <string name="postal_code">postal code</string>
    <string name="country">country</string>
    <string name="sold">Sold</string>
    <string name="fake_agent">fake agent</string>
    <string name="entry_date">Entry date</string>
    <string name="date">10/12/1994</string>
    <string name="sale_date">Sale date</string>
    <string name="empty_location_of_interest">-</string>
    <string name="update_button_property_detail">Something wrong happened !</string>
    <string name="maps_static_error">An error was encountered.</string>
    <string name="maps_static_error_zero_results">No property found for this address.</string>
    <string name="location_example">location example</string>
    <string name="location">location</string>


    //form
    <string-array name="form_wording">
        <item>Street view</item>
        <item>Living room</item>
        <item>Hall</item>
        <item>Kitchen</item>
        <item>Dining room</item>
        <item>Bathroom</item>
        <item>Balcony</item>
        <item>Bedroom</item>
        <item>Terrace</item>
        <item>Walk in closet</item>
        <item>Office</item>
        <item>Roof top</item>
        <item>Plan</item>
        <item>Hallway</item>
        <item>View</item>
        <item>Garage</item>
        <item>Swimming pool</item>
        <item>Fitness centre</item>
        <item>Spa</item>
        <item>Cinema</item>
        <item>Conference</item>
        <item>Stairs</item>
        <item>Garden</item>
        <item>Floor</item>
    </string-array>
    <string-array name="form_district">
        <item>Bronx</item>
        <item>Brooklyn</item>
        <item>Manhattan</item>
        <item>Queens</item>
        <item>Staten Island</item>
    </string-array>

    <string-array name="form_city">
        <item>New York</item>
    </string-array>

    <string-array name="form_country">
        <item>United States</item>
    </string-array>

    <string-array name="form_type">
        <item>Flat</item>
        <item>Penthouse</item>
        <item>Mansion</item>
        <item>Duplex</item>
        <item>House</item>
        <item>Loft</item>
        <item>Townhouse</item>
        <item>Condo</item>
    </string-array>

    //empty property detail
    <string name="select_property_for_detail">Select a property to see his detail.</string>

    <string name="details">Property details</string>
    <string name="is_available">Is available ?</string>
    <string name="add_form_button">ADD</string>
    <string name="cancel_form_button">CANCEL</string>
    <string name="entry_date_form">Entry date into the market</string>
    <string name="select_a_date">Select a date</string>
    <string name="pick_a_photo">Pick a photo</string>

    <string name="default_notification_channel_id" translatable="false">default notification channel id</string>

    //form error
    <string name="form_error_photo">No photo selected. Please pick at least one photo.</string>
    <string name="form_error_field_empty">Field can\'t be empty.</string>
    <string name="form_error_date">No date selected.</string>
    <string name="form_error_media_photo">Pick a photo with your camera or from your gallery.</string>
    <string name="form_error_media_wording">A wording is necessary to add your photo.</string>
    <string name="form_error_media_photo_wording">Pick a photo with your camera or from your gallery and put it a wording.</string>

    //media
    <string name="wording">Wording</string>
    <string name="many_photos_of_the_property">Many photos of the property</string>

    //notification
    <string name="notification_property_add">A new property has been had.</string>
    <string name="notification_property_update">The property has been update.</string>
    <string name="channel_name">Database</string>
    <string name="channel_description">Database get changes.</string>

    //map
    <string name="map_need_location_permission">RealEstateManager need permission to get your location.</string>
    <string name="map_location_permission_retry">Retry</string>
    <string name="map_need_location">Map need location</string>

    //search
    <string name="search_min_price">min price</string>
    <string name="search_max_price">max price</string>
    <string name="search_min_square_meters">min square meters</string>
    <string name="search_max_square_meters">max square meters</string>
    <string name="search_min_rooms">min rooms</string>
    <string name="search_min_bathrooms">min bathrooms</string>
    <string name="search_min_bedrooms">min bedrooms</string>
    <string name="search_since">Since</string>
    <string name="search_indifferent">Indifferent</string>
    <string name="search_button">Search</string>
    <string name="search_availability">Availability</string>
    <string name="search_no_property_found">No property found.</string>
    <string name="search_no_criteria">Please select a criteria at least.</string>

    //loan simulator
    <string name="loan_simulator_price">Price of the property you wish to acquire</string>
    <string name="loan_simulator_period">Desired repayment period (in year)</string>
    <string name="loan_simulator_contribution">Your contribution</string>
    <string name="loan_simulator_amount">Loan amount :</string>
    <string name="loan_simulator_rate">Loan rate assessed at :</string>
    <string name="loan_simulator_monthly_payment">Monthly payment to be repaid assessed at :</string>
    <string name="estimate">Estimate</string>
    <string name="estimating">Estimating</string>
    <string name="loan_simulator_error_contribution">A minimal contribution of 10% of the price is required.</string>
    <string name="validate_form_button">Validate</string>

    <string-array name="search_district">
        <item></item>
        <item>Bronx</item>
        <item>Brooklyn</item>
        <item>Manhattan</item>
        <item>Queens</item>
        <item>Staten Island</item>
    </string-array>

    <string-array name="search_city">
        <item></item>
        <item>New York</item>
    </string-array>

    <string-array name="search_country">
        <item></item>
        <item>United States</item>
    </string-array>

    <string-array name="search_type">
        <item></item>
        <item>Flat</item>
        <item>Penthouse</item>
        <item>Mansion</item>
        <item>Duplex</item>
        <item>House</item>
        <item>Loft</item>
        <item>Townhouse</item>
        <item>Condo</item>
    </string-array>

</resources>